--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 
 <% if (! locals.user) { %>
-  <!-- Not signed in -->
+  <!-- IF not signed in -->
   <div class="jumbotron">
     <h1 class="display-4">Welcome!</h1>
     <p class="lead">Welcome to the DocuSign Node.JS examples with
@@ -9,13 +9,31 @@
   </div>
 <% } %>
 
+<div>
+  <h2>Core Examples</h2>
 
-  <!-- Signed in -->
-  <div>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="/envelope_1_form" role="button"
-        data-busy="href">Send an Envelope</a>
-    </p>
-  </div>
+  <h4><a href="eg001">Embedded Signing Ceremony</a></h4>
+  <p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer. 
+    With embedded signing, the DocuSign signing ceremony is initiated from your website.
+    <a href="eg001">Go!</a>
+  </p>
+  <p>API methods used: 
+     <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
+     <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+  </p>
+
+  <h4><a href="eg002">Send an envelope with a remote (email) signer and cc recipient</a></h4>
+  <p>The envelope includes a pdf, Word, and HTML document. Anchor text 
+    (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+    is used to position the signing fields in the documents.
+  </p>
+    <a href="eg002">Go!</a>
+  </p>
+  <p>API method used: 
+     <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+
+
+</div>
 
 <% include ../partials/foot %>
