--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -18,7 +18,7 @@
     <script src="/assets/notify.min.js"></script> <!-- see https://notifyjs.jpillora.com/ -->
     <script src="/assets/eg_03.js"></script>
 
-<% if (true) { %>
+<% if (false) { %>
   <!-- For debugging: showing local values including session -->
   <pre>
   locals:
