--- a/views/pages/examples/eg001.ejs
+++ b/views/pages/examples/eg001.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/head %>
+<% include ../../partials/head %>
 
 <h4>Embedded Signing Ceremony</h4>
 <p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer. 
@@ -9,20 +9,21 @@
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
 
-<form class="eg" action="" method="post" > <!-- data-busy="form" -->
+<form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
       <label for="signerEmail">Signer Email</label>
       <input type="email" class="form-control" id="signerEmail" name="signerEmail"
-             aria-describedby="emailHelp" placeholder="Enter email" 
+             aria-describedby="emailHelp" placeholder="pat@example.com" required
              value="<%= locals.dsConfig.signerEmail %>">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
       <label for="signerName">Signer Name</label>
-      <input type="text" class="form-control" id="signerName" placeholder="Name" name="signerName"
-             value="<%= locals.dsConfig.signerName %>">
+      <input type="text" class="form-control" id="signerName" placeholder="Pat Johnson" name="signerName"
+             value="<%= locals.dsConfig.signerName %>" required>
     </div>
+    <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   
-<% include ../partials/foot %>
+<% include ../../partials/foot %>
