--- a/views/pages/examples/eg002.ejs
+++ b/views/pages/examples/eg002.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/head %>
 
-<h4>Send an envelope with a remote (email) signer and cc recipient</h4>
+<h4>2. Send an envelope with a remote (email) signer and cc recipient</h4>
 <p>The envelope includes a pdf, Word, and HTML document. Anchor text 
   (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
   is used to position the signing fields in the documents.
