--- a/views/pages/examples/eg005.ejs
+++ b/views/pages/examples/eg005.ejs
@@ -1,12 +1,10 @@
 <% include ../../partials/head %>
 
-<h4>1. Embedded Signing Ceremony</h4>
-<p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer. 
-  With embedded signing, the DocuSign signing ceremony is initiated from your website.
+<h4>5. List an envelope's recipients and their status</h4>
+<p>List the envelope's recipients, including their current status.
 </p>
-<p>API methods used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+<p>API method used: 
+   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
 </p>
 <p>
   <a target="_blank" href="<%= source %>">Example source.</a>
