--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -71,4 +71,7 @@
       <div class="rect5"></div>
       </div>
     </section>
+
+    <p id="download-continue" class="feedback"><a href="/">Continue</a></p>
+
     <section id="content">
