--- a/views/pages/examples/eg006.ejs
+++ b/views/pages/examples/eg006.ejs
@@ -1,12 +1,11 @@
 <% include ../../partials/head %>
 
-<h4>4. Get an envelope's core information and status</h4>
-<p>List the core information about an envelope, including its overall status.
-  Additional API/SDK methods may be used to get additional information about the 
-  envelope, its documents, recipients, etc.
+<h4>6. List an envelope's documents</h4>
+<p>List the envelope's documents. A <i>Certificate of Completion</i> document 
+   is also associated with every envelope.
 </p>
 <p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/get">Envelopes::get</a>.
+   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
 </p>
 
 <p>
