--- a/views/pages/examples/eg004.ejs
+++ b/views/pages/examples/eg004.ejs
@@ -10,7 +10,7 @@
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source.</a>
+  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
 </p>
 
 <% if (envelopeOk) { %>
