--- a/views/pages/examples/eg007.ejs
+++ b/views/pages/examples/eg007.ejs
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source.</a>
+  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
 </p>
 
 <% if (! envelopeOk) { %>
