Make template and binary transfer

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -74,7 +74,7 @@
      <a href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
   </p>
 
-  <h4 id="example010">10. <a href="eg010"></a>Send an envelope using binary document transfer</a></h4>
+  <h4 id="example010">10. <a href="eg010">Send an envelope using binary document transfer</a></h4>
   <p>The envelope includes a pdf, Word, and HTML document.</p>
   <p>Multipart data transfer is used to send the documents in binary format to DocuSign. 
     Binary transfer is a more efficient than base64 encoding and is recommended for documents over 15M Bytes.
