--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -74,6 +74,13 @@
      <a href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
   </p>
 
+  <h4 id="example009">9. <a href="eg009">Send an envelope using a template</a></h4>
+  <p>The envelope is defined by the template.
+     The signer and cc recipient name and email are used to fill in the template's <i>roles</i>.</p>
+  <p>API method used: 
+     <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  </p>
+
   <h4 id="example010">10. <a href="eg010">Send an envelope using binary document transfer</a></h4>
   <p>The envelope includes a pdf, Word, and HTML document.</p>
   <p>Multipart data transfer is used to send the documents in binary format to DocuSign. 
