Update eg001 with reusable worker function

--- a/views/pages/examples/eg004.ejs
+++ b/views/pages/examples/eg004.ejs
@@ -1,6 +1,6 @@
 <% include ../../partials/head %>
 
-<h4>4. Get an envelope's core information and status</h4>
+<h4>4. Get an envelope's basic information and status</h4>
 <p>List the core information about an envelope, including its overall status.
   Additional API/SDK methods may be used to get additional information about the 
   envelope, its documents, recipients, etc.
