Added documentation links and additional info for each example

--- a/views/pages/examples/eg003.ejs
+++ b/views/pages/examples/eg003.ejs
@@ -1,8 +1,9 @@
 <% include ../../partials/head %>
 
 <h4>3. List envelopes in the user's account</h4>
-<p>List the envelopes created in the last 30 days.
-</p>
+<p>List the envelopes created in the last 30 days.</p>
+<p>This example demonstrates how to query DocuSign about envelopes sent by the current user.</p>
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 <p>API method used: 
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
 </p>
