--- a/views/pages/examples/eg004.ejs
+++ b/views/pages/examples/eg004.ejs
@@ -3,8 +3,16 @@
 <h4>4. Get an envelope's basic information and status</h4>
 <p>List the core information about an envelope, including its overall status.
   Additional API/SDK methods may be used to get additional information about the 
-  envelope, its documents, recipients, etc.
+  envelope, its documents, recipients, etc.</p>
+
+<p>This example demonstrates how to obtain the latest information about 
+  an envelope from DocuSign. Often an alternative is to use Connect 
+  to enable DocuSign to proactively send your application updates when the
+  status of an envelope changes.
 </p>
+
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+
 <p>API method used: 
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/get">Envelopes::get</a>.
 </p>
