--- a/views/pages/examples/eg006.ejs
+++ b/views/pages/examples/eg006.ejs
@@ -4,6 +4,11 @@
 <p>List the envelope's documents. A <i>Certificate of Completion</i> document 
    is also associated with every envelope.
 </p>
+
+<p>This method is often used to dynamically create a list of an envelope's documents.</p>
+
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+
 <p>API method used: 
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
 </p>
