--- a/views/pages/examples/eg007.ejs
+++ b/views/pages/examples/eg007.ejs
@@ -11,6 +11,14 @@
   <li>The envelope's individual documents</li>
   <li>The envelope's Certificate of Completion</li>
 </ul>
+
+<p>This example demonstrates how to fetch the contents of an envelope's documents.
+  The method is often used to build up a 'steering list' of an envelope's
+  documents before they are downloaded.
+</p>
+
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+
 <p>API method used: 
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
 </p>
