--- a/views/pages/examples/eg008.ejs
+++ b/views/pages/examples/eg008.ejs
@@ -4,6 +4,14 @@
 <p>Create a template with two roles, <b>signer</b> and <b>cc</b>. 
    The template includes three documents.
 </p>
+
+<p>Templates are usually created using the DocuSign web tool. This example creates
+  a template that can later be used by example #9. This example first lists 
+  the user's templates and only creates a new one if necessary.
+</p>
+
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+
 <p>API method used:
    <a href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
 </p>
