--- a/views/pages/examples/eg011.ejs
+++ b/views/pages/examples/eg011.ejs
@@ -3,6 +3,9 @@
 <h4>5. List an envelope's recipients and their status</h4>
 <p>List the envelope's recipients, including their current status.
 </p>
+
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
+
 <p>API method used: 
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
 </p>
