--- a/views/pages/examples/eg001.ejs
+++ b/views/pages/examples/eg001.ejs
@@ -1,12 +1,12 @@
 <% include ../../partials/head %>
 
 <h4>1. Embedded Signing Ceremony</h4>
-<p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer. 
-  With embedded signing, the DocuSign signing ceremony is initiated from your website.
-</p>
+<p>This example sends an envelope, and then uses an embedded signing ceremony for the first signer.</p> 
+<p>Embedded signing provides a smoother user experience for the signer: the DocuSign signing ceremony is initiated from your website.</p>
+<p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 <p>API methods used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and 
+   <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
 <p>
   <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
