Update src file links. Eg 8 (create template) working

--- a/views/pages/examples/eg006.ejs
+++ b/views/pages/examples/eg006.ejs
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg006.js</a> on GitHub.
 </p>
 
 <% if (envelopeOk) { %>
