--- a/views/pages/examples/eg008.ejs
+++ b/views/pages/examples/eg008.ejs
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg008.js</a> on GitHub.
 </p>
   
   <form class="eg" action="" method="post" data-busy="form">
