--- a/views/pages/examples/eg010.ejs
+++ b/views/pages/examples/eg010.ejs
@@ -3,7 +3,7 @@
 <h4>10. Send an envelope using binary document transfer</h4>
 <p>The envelope includes a pdf, Word, and HTML document.</p>
 <p>Multipart data transfer is used to send the documents in binary format to DocuSign. 
-  Binary transfer is a more 33% efficient than base64 encoding and is recommended for documents over 15M Bytes.
+  Binary transfer is 33% more efficient than base64 encoding and is recommended for documents over 15M Bytes.
 </p>
 
 <p>Since binary transfer is not yet supported by the SDK, this example uses the API directly and 
@@ -16,7 +16,7 @@ demonstrates how to do so.</p>
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg010.js</a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
