--- a/views/pages/examples/eg011.ejs
+++ b/views/pages/examples/eg011.ejs
@@ -10,7 +10,7 @@
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
 </p>
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg011.js</a> on GitHub.
 </p>
 
 <% if (envelopeOk) { %>
