--- a/views/pages/examples/eg001.ejs
+++ b/views/pages/examples/eg001.ejs
@@ -9,7 +9,7 @@
    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createRecipient">EnvelopeViews::createRecipient</a>.
 </p>
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg001.js</a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
