--- a/views/pages/examples/eg003.ejs
+++ b/views/pages/examples/eg003.ejs
@@ -8,7 +8,7 @@
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
 </p>
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg003.js</a> on GitHub.
 </p>
 
 <form class="eg" action="" method="post" data-busy="form">
