--- a/views/pages/examples/eg004.ejs
+++ b/views/pages/examples/eg004.ejs
@@ -18,7 +18,7 @@
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg004.js</a> on GitHub.
 </p>
 
 <% if (envelopeOk) { %>
