--- a/views/pages/examples/eg007.ejs
+++ b/views/pages/examples/eg007.ejs
@@ -24,7 +24,7 @@
 </p>
 
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg007.js</a> on GitHub.
 </p>
 
 <% if (! envelopeOk) { %>
