--- a/views/pages/examples/eg009.ejs
+++ b/views/pages/examples/eg009.ejs
@@ -16,7 +16,7 @@
    <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 <p>
-  <a target="_blank" href="<%= source %>">Example source</a> from GitHub.
+    View source file <a target="_blank" href="<%= source %>">eg009.js</a> on GitHub.
 </p>
 
 <% if (templateOk) { %>
