--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
   <!-- IF not signed in -->
   <div class="jumbotron">
     <h1 class="display-4">Welcome!</h1>
-    <p class="lead">Welcome to the DocuSign Node.JS examples with
+    <p class="Xlead">Welcome to the DocuSign Node.JS examples with
       OAuth Authorization Code Grant.</p>
   </div>
 <% } %>
