--- a/views/pages/examples/eg003.ejs
+++ b/views/pages/examples/eg003.ejs
@@ -5,7 +5,7 @@
 <p>This example demonstrates how to query DocuSign about envelopes sent by the current user.</p>
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 <p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/listStatusChanges">Envelopes::listStatusChanges</a>.
 </p>
 <p>
     View source file <a target="_blank" href="<%= source %>">eg003.js</a> on GitHub.
