--- a/views/pages/examples/eg006.ejs
+++ b/views/pages/examples/eg006.ejs
@@ -10,7 +10,7 @@
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
 <p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/list">EnvelopeDocuments::list</a>.
 </p>
 
 <p>
