--- a/views/pages/examples/eg008.ejs
+++ b/views/pages/examples/eg008.ejs
@@ -13,7 +13,7 @@
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
 <p>API method used:
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Templates/Templates/create">Templates::create</a>.
 </p>
 
 <p>
