--- a/views/pages/examples/eg011.ejs
+++ b/views/pages/examples/eg011.ejs
@@ -1,33 +1,60 @@
 <% include ../../partials/head %>
 
-<h4>5. List an envelope's recipients and their status</h4>
-<p>List the envelope's recipients, including their current status.
+<h4>11. Embedded Sending</h4>
+<p>An envelope will be created in draft mode. Your browser will then be redirected to 
+   the DocuSign web tool where the envelope can be (optionally) updated and then sent.</p>
+<p>The envelope includes a pdf, Word, and HTML document. Anchor text 
+      (<a href="https://support.docusign.com/en/guides/AutoPlace-New-DocuSign-Experience">AutoPlace</a>)
+      is used to position the signing fields in the documents.</p>
+<p>DocuSign recommends that you enhance your application as needed to avoid the need 
+    for the sender view. For example, if the sender view is used to optionally
+    add additional documents to the envelope, enhance your app to provide the 
+    needed feature.
 </p>
 
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
-
-<p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
+<p>API methods used:
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a> and
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
 </p>
+
 <p>
     View source file <a target="_blank" href="<%= source %>">eg011.js</a> on GitHub.
 </p>
 
-<% if (envelopeOk) { %>
-  <p>The envelope you created via example 2 will be queried.</p>
-  
-  <form class="eg" action="" method="post" data-busy="form">
-      <input type="hidden" name="_csrf" value="<%- csrfToken %>">
-      <button type="submit" class="btn btn-primary">Continue</button>
+<form class="eg" action="" method="post" data-busy="form">
+    <div class="form-group">
+        <label for="startingView">Starting View</label>
+        <select id="startingView" name="startingView" class="form-control">
+                <option value="tagging" selected>Tagging view</option>
+                <option value="recipient">Recipient &amp; Documents view</option>
+        </select>
+    </div>
+    <div class="form-group">
+      <label for="signerEmail">Signer Email</label>
+      <input type="email" class="form-control" id="signerEmail" name="signerEmail"
+             aria-describedby="emailHelp" placeholder="pat@example.com" required
+             value="<%= locals.dsConfig.signerEmail %>">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="signerName">Signer Name</label>
+      <input type="text" class="form-control" id="signerName" placeholder="Pat Johnson" name="signerName"
+             value="<%= locals.dsConfig.signerName %>" required>
+    </div>
+    <div class="form-group">
+      <label for="signerEmail">CC Email</label>
+      <input type="email" class="form-control" id="ccEmail" name="ccEmail"
+             aria-describedby="emailHelp" placeholder="pat@example.com" required
+      <small id="emailHelp" class="form-text text-muted">The email and/or name for the cc recipient must be different from the signer.</small>
+    </div>
+    <div class="form-group">
+      <label for="signerName">CC Name</label>
+      <input type="text" class="form-control" id="ccName" placeholder="Pat Johnson" name="ccName"
+             required>
+    </div>
+    <input type="hidden" name="_csrf" value="<%- csrfToken %>">
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-
-<% } else { %>
-  <p>Problem: please first create an envelope using <a href="eg002">example 2.</a> <br/>
-     Thank you.</p>
-     
-  <form class="eg" action="eg002" method="get">
-      <button type="submit" class="btn btn-primary">Continue</button>
-  </form>
-<% } %>
   
 <% include ../../partials/foot %>
