--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -94,6 +94,14 @@
     <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
   </p>
 
+  <h4 id="example011">11. <a href="eg011">Embedded sending</a></h4>
+  <p>An envelope will be created in draft mode. The DocuSign
+    web tool (NDSE) will then be shown, enabling further updates
+    to the envelope before it is sent.
+  </p>
+  <p>API methods used: 
+    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+    <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
 
 </div>
 
