--- a/views/pages/examples/eg005.ejs
+++ b/views/pages/examples/eg005.ejs
@@ -6,7 +6,7 @@
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
 <p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeRecipients/list">EnvelopeRecipients::list</a>.
 </p>
 <p>
     View source file <a target="_blank" href="<%= source %>">eg005.js</a> on GitHub.
