--- a/views/pages/examples/eg007.ejs
+++ b/views/pages/examples/eg007.ejs
@@ -20,7 +20,7 @@
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
 <p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeDocuments/get">EnvelopeDocuments::get</a>.
 </p>
 
 <p>
