--- a/views/pages/examples/eg009.ejs
+++ b/views/pages/examples/eg009.ejs
@@ -13,7 +13,7 @@
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
 <p>API method used: 
-   <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+   <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 <p>
     View source file <a target="_blank" href="<%= source %>">eg009.js</a> on GitHub.
