--- a/views/pages/examples/eg010.ejs
+++ b/views/pages/examples/eg010.ejs
@@ -12,7 +12,7 @@ demonstrates how to do so.</p>
 <p><a target='_blank' href='<%= documentation %>'>Documentation</a> about this example.</p>
 
 <p>API method used: 
-  <a href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
+  <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
 </p>
 
 <p>
