--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -103,6 +103,12 @@
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/Envelopes/create">Envelopes::create</a>.
     <a target='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createSender">EnvelopeViews::createSender</a>.
 
+  <h4 id="example012">12. <a href="eg012">Embedded DocuSign web tool</a></h4>
+  <p>Redirect the user to the DocuSign web tool.</p>
+  <p>API method used: 
+    <a target ='_blank' href="https://developers.docusign.com/esign-rest-api/reference/Envelopes/EnvelopeViews/createConsole">EnvelopeViews::createConsole</a>.
+  </p>  
+
 </div>
 
 <!-- anchor-js is only for the index page -->
