Add template, docusign ver to 4.0.2
Add template now adds additional field types.
I found a bug whereby Number fields can’t be added. Filed DCM-2732

--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -8,7 +8,13 @@
   <p><%= errorCode %>: <%= errorMessage %></p>
 <% } else { %>
   <p><pre><%= err %></pre></p>
+
+  <h3>Stack trace</h3>
+  <p><pre>
+    <%= err.stack %>
+  </pre></p>
 <% } %>
+
 
 <p><a href="/">Continue</a></p>
   
